--- a/app-properties/greeting-service-cloud.properties
+++ b/app-properties/greeting-service-cloud.properties
@@ -1,5 +1,5 @@
 server.port=9898
-message.default.welcome= Welcome from cloud config server changed...
-message.default.goodbye= Goodbye...
+message.default.welcome= Welcome to the git 
+message.default.goodbye= Goodbye All!!!
 
 management.endpoints.web.exposure.include=*
